--- a/.env
+++ b/.env
@@ -5,3 +5,10 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root:123456@localhost:3306/api_nest"
+
+
+DB_USERNAME="root"
+DB_PASSWORD="123456"
+DB_DATABASE="api_nest"
+DB_HOST="localhost"
+DB_PORT="3306"
